2005-02-14  Mark McLoughlin  <markmc@redhat.com>
	
	* lib/protosession.py: pass the profile file
	to sabayon-monitor when launching it.
	
	* admin-tool/sabayon-monitor.py: barf if we're
	not passed an argument
	
2005-02-14  Mark McLoughlin  <markmc@redhat.com>

	Add a SABAYON_DEBUG env variable. Run with
	SABAYON_DEBUG=help to see allowable values.

	* lib/util.py: add debug_print() foo.
	
	* lib/storage.py: use it here.

2005-02-14  Mark McLoughlin  <markmc@redhat.com>

	Try to fix the build mess.
	
	* configure.ac: 
	Use AM_PATH_PYTHON instead of random copied and pasted
	crackrock.
	Add --enable-consolehelper and check for PAM prefix. Both
	copied from GDM.
	
	* admin-tool/Makefile.am:
	Use the SCRIPTS primary for the wrapper scripts and the
	PYTHON primary for python files.
	Generate sabayon.console so we get the right path.
	Copy GDM's consolehelper install stuff.
	
	* admin-tool/sabayon.console.in: copy from sabayon.console.
	
	* lib/Makefile.am,
	  lib/sources/Makefile.am: use the PYTHON primary for
	python files.

2005-02-13  David Lodge <dave@cirt,net>

	* configure.ac: Added en_GB to ALL_LINGUAS.

2005-02-13  Seth Nickell  <seth@gnome.org>

	* admin-tool/sabayon.glade:

	Don't require GNOME (causes lots of debug warnings at
	sabayon startup).
	
	* lib/sources/gconfsource.py:

	Change self.get_committing_client() call to the function name
	as implemented: self.get_committing_client_and_address().
	Fixes error when committing GConf keys.

2005-02-13  Seth Nickell  <seth@gnome.org>

	* admin-tool/Makefile.am:
	* admin-tool/sabayon.desktop.in: 

	Initial .desktop file for Sabayon
	
	* admin-tool/sabayon.png: 

	Placeholder icon...10 bonus points if you can tell what it is
	
	* admin-tool/sabayon.console:
	* admin-tool/sabayon.pam:

	consolehelper magic so sabayon can be run from GNOME w/o
	being root already.

2005-02-13  Seth Nickell  <seth@gnome.org>

	* admin-tool/profilesdialog.py:

	Throw up an explanatory (but not helpful...) error alert if the 